[gd_scene load_steps=4 format=2]

[ext_resource path="res://wrong.wav" type="AudioStream" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://right.wav" type="AudioStream" id=3]

[node name="World" type="Node"]
script = ExtResource( 2 )
grid_x_size = 2
grid_y_size = 2

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 92.22, 77.7639 )

[node name="ResultTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WrongChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="RightChoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="ResultTimer" to="." method="_on_showing_result_ended"]
